# ksenos_ground_2025

./: .gitmodules  BT_仕様書.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml  仕様書_初版.md
.github/workflows/: ros2_ci.yml
config/: LiDAR.rviz  Model.rviz  Sim.rviz  path.rviz  rviz.rviz  rviz2.rviz
launch/: .estimate_pose.launch.yaml  dummy_publisher_auto.sh  dummy_publisher_manual.sh  estimate_altitude.launch.yaml  estimate_kalman_gain.launch.yaml  estimate_pose.launch.yaml  laser_control.launch.yaml  lat_control.launch.yaml  lat_control_components.launch.py  long_control.launch.yaml  long_control_components.launch.py  mode_control.launch.yaml  mode_control_components.launch.py  model_load.launch.py  model_test.launch.yaml  motor_control.launch.yaml  path_follower.launch.yaml  path_generator.launch.yaml  plot_pose_position.yaml  pointcloud_pipeline_components.launch.py  pointcloud_process.lauch.yaml  pose_estimation.launch.yaml  pose_estimation.yaml  pose_estimation_components.launch.py  run_proc.launch.yaml  sbus_data_processor.launch.yaml  sbus_data_processor_components.launch.py  sim_motion.yaml  tf_lidar.launch.yaml  tf_non_lidar.launch.yaml  tf_static.launch.yaml
meshes/: aileron_left.stl  aileron_right.stl  body.stl  elevator.stl  propeller.stl  rudder.stl
rosbag2_2025_07_13-17_22_15/: metadata.yaml  rosbag2_2025_07_13-17_22_15_0.db3
scripts/: eight_turning.py  pyproject.toml
src/: aileron_control.cpp  calc_altitude_imu.cpp  calc_altitude_lidar.cpp  calc_altitude_pressure.cpp  calc_average_altitude_velocity.cpp  calc_energy.cpp  calc_flight_distance.cpp  calc_rpy_from_quat.cpp  control_L1_law.cpp  control_aileron.cpp  control_elevator.cpp  control_rudder.cpp  control_throttle.cpp  correction_ground.cpp  detect_movable_objects.cpp  estimate_kalman_gain.cpp  estimate_pose.cpp  estimate_vel.cpp  get_sbus_raw_data.cpp  init_scans.cpp  joint_publisher.cpp  latAcc_to_targetRollAngle.cpp  mode_auto_turning.cpp  mode_eight_turning.cpp  mode_eight_turning_angle.cpp  mode_rise_turning.cpp  mode_target_altitude_selector.cpp  mode_target_lat_acc_selector.cpp  mode_target_velocity_selector.cpp  offset_sbus_data.cpp  pointcloud_pipeline_container.cpp  pointcloud_transform.cpp  pose_estimation_container.cpp  proc_sbus_data.cpp  project_orientation.cpp  pub_pointcloud.cpp  pub_rpy.cpp  publish_joint_airplane.cpp  receive_udp_packet.cpp  rotation_counter.cpp  (+12 more)
src/auto_landing/: calc_flight_distance.cpp  control_L1_law.cpp  control_drop.cpp  control_speed.cpp  mode_target_lat_acc_selector.cpp  mode_target_velocity_selector.cpp  path_generator.cpp  yaw_angle_correction.cpp
src/lat_control/: control_rudder.cpp  turningRadius_to_latAcc.cpp
src/long_control/: calc_energy.cpp  control_elevator.cpp  control_throttle.cpp  mode_target_altitude_selector.cpp  unity_control_input.cpp
src/mode_control/: mode_auto_landing_backup.cpp  mode_eight_turning_angle.cpp
src/pointcloud_pipeline/: correction_ground.cpp  detect_movable_objects.cpp  init_scans.cpp  leveling_imu.cpp  pointcloud_transform.cpp  pub_pointcloud.cpp
src/pose_estimation/: calc_altitude_imu.cpp  calc_altitude_lidar.cpp  receive_udp_packet.cpp  yaw_angle_serialization.cpp
src/sbus_data_processor/: publish_joint_airplane.cpp  sbus_calibration.cpp  sbus_format_data_to_radian.cpp  sbus_format_data_to_raw.cpp  sbus_get_raw_data.cpp  sbus_offset_apply.cpp
urdf/: ksenos_model.urdf
